# SERAX_Forex_algo

./: .gitignore  README.md  setup.sh
app/dev/: main  main.cpp
docs/: Documentation.md  maths.md
src/data/: extracting_data.py
src/dev/: Makefile  main  main.cpp  main.py  re-build
src/dev/data/: extracting_data.py
src/dev/data/code/: combine_csv_files.py  extracting_data.py  training_data.py
src/dev/data/scripts/: combine_csv_files.py  extracting_data.py  gather.sh  train.sh  training_data.py
src/dev/model/: CMakeLists.txt  Makefile  ml  ml.cpp  trading_model.xml
src/dev/model/objects/: PRICE.h
src/dev/objects/: PRICE.cpp  PRICE.h
